--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,13 @@ h1 {
 
 }
 
-
+input {
+	appearance: auto;
+	background-color: #a9a9a9;
+	box-sizing: border-box;
+	cursor: text;
+	display: inline-block;
+}
 
 
 
