--- a/src/index.css
+++ b/src/index.css
@@ -2,61 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-/* reset CSS */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-  
-
-  background-color: whitesmoke;
-}
-
-html, body {
-  height: 100%;
-  width: 100%;
-}
-
 body {
-  font-family: 'Nunito', sans-serif;
-  color: rgb(45, 45, 45);
+  margin:  0 auto;
+  padding: 0 ;
+  overflow-x: hidden;
+  box-sizing: border-box;
+  background: #fff;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
-
-h1 {
-  font-size: 3rem;
-  font-weight: 600;
-
-}
-
-h2 {
-  font-size: 2rem;
-  font-weight: 600;
-}
-
-input, select {
-	appearance: auto;
-	background-color: #a9a9a9;
-	box-sizing: border-box;
-	cursor: text;
-	display: inline-block;
-}
-
-
 
 
