--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,9 @@ h1 {
 /* CARROUSEL ARROWS  */
 .slick-arrow {
   font-size: 2rem;
-  color: goldenrod;
+  color: #701B75;
+  width: 40px;
+  height: 40px;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
