--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,6 @@ body {
   background-color: whitesmoke
 }
 
-
 h1,
 h2,
 h3,
@@ -40,6 +39,7 @@ h1 {
   font-weight: 700;
   line-height: 1.2;
   text-align: center;
+  margin-top: 40px;
   
 
 }
@@ -77,7 +77,7 @@ h1 {
 /* CARROUSEL ARROWS  */
 .slick-arrow {
   font-size: 2rem;
-  color: #701B75;
+  color: #911c97;
   width: 40px;
   height: 40px;
   position: absolute;
@@ -87,12 +87,16 @@ h1 {
   cursor: pointer; 
 }
 
+.slick-arrow:hover {
+  color: #57195b;
+}
+
 .prev-arrow {
-  left: 20px; 
+  left: 10px; 
 }
 
 .next-arrow {
-  right: 20px; 
+  right: 10px; 
 }
 
 .slick-prev:before,
@@ -136,6 +140,6 @@ h1 {
 .event-dot {
   width: 12px;
   height: 12px;
-  background-color: goldenrod; 
+  background-color: #701B75; 
   border-radius: 50%;
 }
