--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,16 @@
 
 
 
-/* 
+
+/*
 
 * {
   outline: 2px red solid;
 }
 
 */
+
+
 
 
 /*  MAIN CSS   */
@@ -66,7 +69,9 @@ h1 {
 /*  EVENT & VENUE CARDS   */
 
 .card {
-  box-shadow: 0 3px 3px rgba(0,0,0,.2)
+  box-shadow: 0 3px 3px rgba(0,0,0,.2);
+  transition: .3s ease-in-out;
+
 }
 
 .card:hover {
