fix: fix profilepage bug

--- a/src/index.css
+++ b/src/index.css
@@ -151,6 +151,7 @@ h1 {
 /* UserEventsCard */
 
 .user-events-cards {
+  margin-top: 40px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
